check_errors.txt
    Checking prismarine v0.1.0 (C:\Users\mikan\.gemini\antigravity\scratch\Prismarine-Core-Project\src-tauri)
error[E0425]: cannot find value `app` in this scope
   --> src\lib.rs:879:5
    |
879 |     app.run(move |app_handle, event| {
    |     ^^^ not found in this scope

error[E0282]: type annotations needed
   --> src\lib.rs:879:19
    |
879 |     app.run(move |app_handle, event| {
    |                   ^^^^^^^^^^
...
882 |             let state = app_handle.state::<AppState>();
    |                         ---------- type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
879 |     app.run(move |app_handle: /* Type */, event| {
    |                             ++++++++++++

error[E0282]: type annotations needed
   --> src\lib.rs:888:21
    |
888 |                 let manager = handle_clone.lock().await;
    |                     ^^^^^^^
889 |                 let _ = manager.stop_all_servers().await;
    |                         ------- type must be known at this point
    |
help: consider giving `manager` an explicit type
    |
888 |                 let manager: /* Type */ = handle_clone.lock().await;
    |                            ++++++++++++

Some errors have detailed explanations: E0282, E0425.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `prismarine` (lib) due to 3 previous errors
